<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingTop="@dimen/keyline_5"
  android:paddingBottom="@dimen/keyline_5"
  android:paddingStart="@dimen/keyline_4"
  android:paddingEnd="@dimen/keyline_4">

    <io.material.materialthemebuilder.widget.LabelLinkView
      android:id="@+id/label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/keyline_4"
      android:text="@string/label_typography_scale_title"
      app:leadingIcon="@drawable/ic_format_size_24dp"
      app:linkUrl="https://material.io/design/typography/the-type-system.html#type-scale" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceHeadline1"
      app:previewText="@string/text_appearance_h1_label"
      app:previewTextAppearance="?textAppearanceHeadline1"
      app:previewAlpha="?alphaEmphasisHigh"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceHeadline2"
      app:previewText="@string/text_appearance_h2_label"
      app:previewTextAppearance="?textAppearanceHeadline2"
      app:previewAlpha="?alphaEmphasisHigh"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceHeadline3"
      app:previewText="@string/text_appearance_h3_label"
      app:previewTextAppearance="?textAppearanceHeadline3"
      app:previewAlpha="?alphaEmphasisHigh"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceHeadline4"
      app:previewText="@string/text_appearance_h4_label"
      app:previewTextAppearance="?textAppearanceHeadline4"
      app:previewAlpha="?alphaEmphasisHigh"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceHeadline5"
      app:previewText="@string/text_appearance_h5_label"
      app:previewTextAppearance="?textAppearanceHeadline5"
      app:previewAlpha="?alphaEmphasisHigh"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceHeadline6"
      app:previewText="@string/text_appearance_h6_label"
      app:previewTextAppearance="?textAppearanceHeadline6"
      app:previewAlpha="?alphaEmphasisHigh"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceSubtitle1"
      app:previewText="@string/text_appearance_subtitle_1_label"
      app:previewTextAppearance="?textAppearanceSubtitle1"
      app:previewAlpha="?alphaEmphasisMedium"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceSubtitle2"
      app:previewText="@string/text_appearance_subtitle_2_label"
      app:previewTextAppearance="?textAppearanceSubtitle2"
      app:previewAlpha="?alphaEmphasisMedium"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceBody1"
      app:previewText="@string/text_appearance_body_1_label"
      app:previewTextAppearance="?textAppearanceBody1"
      app:previewAlpha="?alphaEmphasisMedium"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceBody2"
      app:previewText="@string/text_appearance_body_2_label"
      app:previewTextAppearance="?textAppearanceBody2"
      app:previewAlpha="?alphaEmphasisMedium"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceButton"
      app:previewText="@string/text_appearance_button_label"
      app:previewTextAppearance="?textAppearanceButton"
      app:previewAlpha="?alphaEmphasisHigh"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceCaption"
      app:previewText="@string/text_appearance_caption_label"
      app:previewTextAppearance="?textAppearanceCaption"
      app:previewAlpha="?alphaEmphasisMedium"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.TypeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?textAppearanceOverline"
      app:previewText="@string/text_appearance_overline_label"
      app:previewTextAppearance="?textAppearanceOverline"
      app:previewAlpha="?alphaEmphasisMedium"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

</LinearLayout>
