<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
      android:id="@+id/bottom_app_bar_menu_share"
      android:title="@string/app_bar_menu_share"
      android:icon="@drawable/ic_share_on_surface_24dp"
      app:showAsAction="ifRoom"/>
    <item
      android:id="@+id/bottom_app_bar_menu_bookmark"
      android:title="@string/app_bar_menu_bookmark"
      android:icon="@drawable/ic_bookmark_on_surface_24dp"
      app:showAsAction="ifRoom"/>

    <item
      android:id="@+id/bottom_app_bar_menu_search"
      android:title="@string/app_bar_menu_search"
      android:icon="@drawable/ic_search_on_surface_24dp"
      app:showAsAction="ifRoom"/>
</menu>
