<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingTop="@dimen/keyline_5"
  android:paddingBottom="@dimen/keyline_5"
  android:paddingStart="@dimen/keyline_4"
  android:paddingEnd="@dimen/keyline_4">

    <io.material.materialthemebuilder.widget.LabelLinkView
      android:id="@+id/label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/keyline_4"
      android:text="@string/label_shape_system_title"
      app:leadingIcon="@drawable/ic_rounded_corner_24dp"
      app:linkUrl="https://material.io/design/shape/about-shape.html" />

    <io.material.materialthemebuilder.widget.ShapeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?shapeAppearanceSmallComponent"
      app:shapeAppearance="?shapeAppearanceSmallComponent"
      app:shapeSizeLetter="@string/shape_appearance_small_label"
      app:shapeStrokeColor="?colorOnBackground"
      app:shapeFillColor="?colorControlHighlight"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.ShapeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?shapeAppearanceMediumComponent"
      app:shapeAppearance="?shapeAppearanceMediumComponent"
      app:shapeSizeLetter="@string/shape_appearance_medium_label"
      app:shapeStrokeColor="?colorOnBackground"
      app:shapeFillColor="?colorControlHighlight"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

    <io.material.materialthemebuilder.widget.ShapeAttributeView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="\?shapeAppearanceLargeComponent"
      app:shapeAppearance="?shapeAppearanceLargeComponent"
      app:shapeSizeLetter="@string/shape_appearance_large_label"
      app:shapeStrokeColor="?colorOnBackground"
      app:shapeFillColor="?colorControlHighlight"
      android:layout_marginTop="@dimen/keyline_2"
      android:layout_marginBottom="@dimen/keyline_2" />

</LinearLayout>
