<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<androidx.core.widget.NestedScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" >

    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:clipToPadding="false"
      android:paddingTop="@dimen/keyline_5"
      android:paddingStart="@dimen/keyline_4"
      android:paddingEnd="@dimen/keyline_4">

        <TextView
          android:id="@+id/usage_title_text_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/instructions_how_to_title"
          android:textAppearance="?textAppearanceOverline"
          android:alpha="?alphaEmphasisMedium" />

        <TextView
          android:id="@+id/usage_body_text_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/keyline_5"
          android:layout_marginBottom="@dimen/keyline_5"
          android:text="@string/instructions_how_to"
          android:textAppearance="?textAppearanceBody1"
          android:alpha="?alphaEmphasisMedium" />

        <TextView
          android:id="@+id/options_title_text_view"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/keyline_5"
          android:text="@string/instructions_options_title"
          android:textAppearance="?textAppearanceOverline"
          android:alpha="?alphaEmphasisMedium" />

        <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/keyline_5">

            <TextView
              android:id="@+id/dark_theme_title_text_view"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="start|center_vertical"
              android:text="@string/instructions_enable_dark_title"
              android:textAppearance="?textAppearanceBody1"
              android:alpha="?alphaEmphasisMedium" />

            <com.google.android.material.switchmaterial.SwitchMaterial
              android:id="@+id/dark_theme_switch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end|center_vertical" />

        </FrameLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
