<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:clipToPadding="false"
  android:paddingTop="@dimen/keyline_5"
  android:paddingBottom="@dimen/keyline_5"
  android:paddingStart="@dimen/keyline_4"
  android:paddingEnd="@dimen/keyline_4">

    <io.material.materialthemebuilder.widget.LabelLinkView
      android:id="@+id/label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/button_label_title"
      app:linkUrl="https://material.io/design/components/buttons.html"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/button_filled"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_button"
      android:layout_marginTop="@dimen/component_label_horizontal_margin"
      android:layout_marginEnd="@dimen/keyline_2"
      app:layout_constraintEnd_toStartOf="@+id/button_text"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintHorizontal_chainStyle="spread_inside"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/label" />

    <com.google.android.material.button.MaterialButton
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:id="@+id/button_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_button"
      android:layout_marginStart="@dimen/keyline_2"
      android:layout_marginEnd="@dimen/keyline_2"
      app:layout_constraintBottom_toBottomOf="@+id/button_filled"
      app:layout_constraintEnd_toStartOf="@+id/button_outlined"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/button_filled"
      app:layout_constraintTop_toTopOf="@+id/button_filled" />

    <com.google.android.material.button.MaterialButton
      style="?materialButtonOutlinedStyle"
      android:id="@+id/button_outlined"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_button"
      android:layout_marginStart="@dimen/keyline_2"
      app:layout_constraintBottom_toBottomOf="@+id/button_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/button_text"
      app:layout_constraintTop_toTopOf="@+id/button_text" />

    <com.google.android.material.button.MaterialButtonToggleGroup
      android:id="@+id/button_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/keyline_5"
      app:layout_constraintTop_toBottomOf="@+id/button_filled"
      app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
          style="?materialButtonOutlinedStyle"
          android:id="@+id/button_one"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_left_button_label" />

        <com.google.android.material.button.MaterialButton
          style="?materialButtonOutlinedStyle"
          android:id="@+id/button_center"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_center_button_label" />

        <com.google.android.material.button.MaterialButton
          style="?materialButtonOutlinedStyle"
          android:id="@+id/button_three"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/button_right_button_label" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
