<?xml version="1.0" encoding="utf-8"?>
<!--
~ Copyright (C) 2019 The Android Open Source Project
~
~ Licensed under the Apache License, Version 2.0 (the "License");
~ you may not use this file except in compliance with the License.
~ You may obtain a copy of the License at
~
~      http://www.apache.org/licenses/LICENSE-2.0
~
~ Unless required by applicable law or agreed to in writing, software
~ distributed under the License is distributed on an "AS IS" BASIS,
~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~ See the License for the specific language governing permissions and
~ limitations under the License.
-->

<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:clipToPadding="false"
  android:paddingTop="@dimen/keyline_5"
  android:paddingBottom="@dimen/keyline_5"
  android:paddingStart="@dimen/keyline_4"
  android:paddingEnd="@dimen/keyline_4">

    <io.material.materialthemebuilder.widget.LabelLinkView
      android:id="@+id/label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/card_label_title"
      app:linkUrl="https://material.io/design/components/cards.html"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/card"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/component_label_horizontal_margin"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/label">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
              android:id="@+id/card_header"
              android:layout_width="match_parent"
              android:layout_height="192dp"
              android:scaleType="centerCrop"
              app:srcCompat="@drawable/sample_image"
              app:tint="?colorSurface"
              app:tintMode="multiply"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/card_overline"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_overline"
              android:textAppearance="?textAppearanceOverline"
              android:alpha="?alphaEmphasisMedium"
              android:layout_marginTop="@dimen/keyline_4"
              android:layout_marginStart="@dimen/keyline_4"
              app:layout_constraintTop_toBottomOf="@+id/card_header"
              app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/card_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_headline_6"
              android:textAppearance="?textAppearanceHeadline6"
              android:alpha="?alphaEmphasisHigh"
              android:layout_marginLeft="@dimen/keyline_4"
              android:firstBaselineToTopHeight="40dp"
              app:layout_constraintTop_toBottomOf="@+id/card_overline"
              app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
              android:id="@+id/card_body"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/keyline_4"
              android:layout_marginEnd="@dimen/keyline_5"
              android:firstBaselineToTopHeight="@dimen/keyline_5"
              android:text="@string/lorem_ipsum"
              android:textAppearance="?textAppearanceBody2"
              android:alpha="?alphaEmphasisMedium"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/card_title" />

            <com.google.android.material.button.MaterialButton
              style="@style/Widget.MaterialComponents.Button.TextButton"
              android:id="@+id/card_button_one"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_button"
              android:layout_marginTop="@dimen/keyline_5"
              android:layout_marginBottom="@dimen/keyline_2"
              android:layout_marginStart="@dimen/keyline_2"
              android:layout_marginEnd="@dimen/keyline_0"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/card_body"
              app:layout_constraintBottom_toBottomOf="parent" />

            <com.google.android.material.button.MaterialButton
              style="@style/Widget.MaterialComponents.Button.TextButton"
              android:id="@+id/card_button_two"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_button"
              android:layout_marginTop="@dimen/keyline_5"
              android:layout_marginBottom="@dimen/keyline_2"
              android:layout_marginStart="@dimen/keyline_0"
              android:layout_marginEnd="@dimen/keyline_2"
              app:layout_constraintStart_toEndOf="@id/card_button_one"
              app:layout_constraintTop_toBottomOf="@id/card_body"
              app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
